[gd_scene load_steps=25 format=3 uid="uid://d0b5p3i1w3h3q"]

[ext_resource type="Script" path="res://Main.gd" id="1_0fi6s"]
[ext_resource type="Texture2D" uid="uid://cn6cr28fdspun" path="res://Screenshot 2023-09-07 at 4.01.53 PM.png" id="1_t6qar"]
[ext_resource type="Script" path="res://MiniGameManager.gd" id="2_ixd5j"]
[ext_resource type="Texture2D" uid="uid://dq7jh1tgtbp4g" path="res://Screenshot 2023-09-06 at 7.42.59 PM.png" id="2_lfyl8"]
[ext_resource type="Texture2D" uid="uid://dxons2rho4opt" path="res://Screenshot 2023-09-06 at 7.43.19 PM.png" id="3_fi8ek"]
[ext_resource type="Script" path="res://Player1.gd" id="3_x7510"]
[ext_resource type="Texture2D" uid="uid://cj8ioe0oo6738" path="res://Screenshot 2023-09-07 at 4.04.24 PM.png" id="5_gvea3"]
[ext_resource type="Script" path="res://Player2.gd" id="5_sucsd"]
[ext_resource type="Script" path="res://Ball.gd" id="7_uknhb"]
[ext_resource type="Texture2D" uid="uid://cc6hxatks4jcq" path="res://football-soccer-ball-pixel-8bit-icon-png.webp" id="8_b8otk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7jnb"]
size = Vector2(76.5, 76)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2jkfk"]
size = Vector2(74, 75.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_mqm6f"]
radius = 32.132

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jt5j5"]
size = Vector2(37.8438, 110)

[sub_resource type="Theme" id="Theme_tfluo"]
default_font_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_03g55"]
font_size = 46
outline_size = 11
outline_color = Color(0, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_b7vf6"]
font_names = PackedStringArray("Arial Rounded MT Bold")

[sub_resource type="LabelSettings" id="LabelSettings_o1w70"]
font = SubResource("SystemFont_b7vf6")
font_size = 34
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_hocau"]
font_names = PackedStringArray("Arial Rounded MT Bold")

[sub_resource type="LabelSettings" id="LabelSettings_iid02"]
font = SubResource("SystemFont_hocau")
font_size = 34
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1dnv"]
size = Vector2(64.7383, 57.933)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4c8b"]
size = Vector2(689.983, 16.5188)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2ucc"]
size = Vector2(652.428, 15.4048)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j418c"]
size = Vector2(129.759, 49.75)

[node name="GameManager" type="Node2D"]
script = ExtResource("1_0fi6s")
metadata/_edit_vertical_guides_ = [384.0, 760.0, 760.0, 576.0, 761.0, 387.0, 576.0]
metadata/_edit_horizontal_guides_ = [320.0, 320.0, -384.0, 328.0, 317.0]

[node name="MiniGameManager" type="Node2D" parent="."]
script = ExtResource("2_ixd5j")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(576, 322.5)
scale = Vector2(1.03047, 0.773923)
texture = ExtResource("1_t6qar")

[node name="Player1" type="CharacterBody2D" parent="."]
collision_layer = 10
collision_mask = 13
safe_margin = 6.545
script = ExtResource("3_x7510")

[node name="Sprite2D" type="Sprite2D" parent="Player1"]
position = Vector2(388, 325)
scale = Vector2(0.107242, 0.117647)
texture = ExtResource("2_lfyl8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
position = Vector2(386.75, 325)
shape = SubResource("RectangleShape2D_h7jnb")

[node name="Player2" type="CharacterBody2D" parent="."]
collision_layer = 10
collision_mask = 13
script = ExtResource("5_sucsd")

[node name="Sprite2D" type="Sprite2D" parent="Player2"]
position = Vector2(761, 327)
scale = Vector2(0.0772959, 0.0768839)
texture = ExtResource("3_fi8ek")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2(761, 331)
shape = SubResource("RectangleShape2D_2jkfk")

[node name="Ball" type="RigidBody2D" parent="."]
collision_mask = 2
mass = 0.06
gravity_scale = 2.66454e-15
sleeping = true
can_sleep = false
linear_damp = -1.0
script = ExtResource("7_uknhb")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
position = Vector2(571.625, 323.035)
scale = Vector2(0.021224, 0.0209244)
texture = ExtResource("8_b8otk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2(571, 323)
scale = Vector2(0.6875, 0.6875)
shape = SubResource("CircleShape2D_mqm6f")

[node name="Goal1" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Goal1"]
position = Vector2(19.625, 326)
scale = Vector2(0.66791, 0.873016)
texture = ExtResource("5_gvea3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal1"]
position = Vector2(15.0781, 325)
shape = SubResource("RectangleShape2D_jt5j5")

[node name="Goal2" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Goal2"]
position = Vector2(1132.62, 328)
scale = Vector2(0.615671, 0.896825)
texture = ExtResource("5_gvea3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal2"]
position = Vector2(1136.28, 328)
shape = SubResource("RectangleShape2D_jt5j5")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 798.0
offset_top = 534.0
offset_right = 1101.0
offset_bottom = 630.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 148.0
offset_top = 13.0
offset_right = 168.0
offset_bottom = 80.0
theme = SubResource("Theme_tfluo")
text = "-"
label_settings = SubResource("LabelSettings_03g55")

[node name="Sprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(54, 49)
scale = Vector2(0.101323, 0.11339)
texture = ExtResource("2_lfyl8")

[node name="Sprite2D2" type="Sprite2D" parent="Panel"]
position = Vector2(250, 47)
scale = Vector2(0.0739796, 0.0717922)
texture = ExtResource("3_fi8ek")

[node name="Score1" type="Label" parent="."]
offset_left = 905.0
offset_top = 562.0
offset_right = 925.0
offset_bottom = 606.0
theme = SubResource("Theme_tfluo")
text = "0
"
label_settings = SubResource("LabelSettings_o1w70")

[node name="Score2" type="Label" parent="."]
offset_left = 976.0
offset_top = 562.0
offset_right = 998.0
offset_bottom = 606.0
theme = SubResource("Theme_tfluo")
text = "0"
label_settings = SubResource("LabelSettings_iid02")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-62, 332)
scale = Vector2(1.76866, 5.92063)
collision_layer = 14
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(24.8776, -39.5228)
shape = SubResource("RectangleShape2D_b1dnv")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(-62, 332)
scale = Vector2(1.76866, 5.92063)
collision_layer = 10
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(379.384, 61.1254)
shape = SubResource("RectangleShape2D_v4c8b")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(-62, 332)
scale = Vector2(1.76866, 5.92063)
collision_layer = 10
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(362.987, -64.2842)
shape = SubResource("RectangleShape2D_c2ucc")

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2(-62, 332)
scale = Vector2(1.76866, 5.92063)
collision_layer = 10
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2(728.8, 33.9491)
shape = SubResource("RectangleShape2D_j418c")

[node name="StaticBody2D5" type="StaticBody2D" parent="."]
position = Vector2(-62, 332)
scale = Vector2(1.76866, 5.92063)
collision_layer = 14
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
position = Vector2(26.4324, 37.1582)
shape = SubResource("RectangleShape2D_b1dnv")

[node name="StaticBody2D6" type="StaticBody2D" parent="."]
position = Vector2(-62, 332)
scale = Vector2(1.76866, 5.92063)
collision_layer = 10
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D6"]
position = Vector2(728.8, -35.3003)
shape = SubResource("RectangleShape2D_j418c")

[node name="StaticBody2D7" type="StaticBody2D" parent="."]
position = Vector2(-62, 332)
scale = Vector2(1.76866, 5.92063)
collision_layer = 14
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D7"]
position = Vector2(2.2616, -1.01341)
shape = SubResource("RectangleShape2D_b1dnv")

[node name="StaticBody2D8" type="StaticBody2D" parent="."]
position = Vector2(-62, 332)
scale = Vector2(1.76866, 5.92063)
collision_layer = 14
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D8"]
position = Vector2(719.754, -2.87132)
shape = SubResource("RectangleShape2D_b1dnv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -111.0
offset_right = 111.0
offset_bottom = 75.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_right = 221.0
offset_bottom = 28.0
text = "First to 3 Goals Wins!"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 20.0
offset_right = 221.0
offset_bottom = 50.0
text = "The More Goals You Score,"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label3" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_top = 47.0
offset_right = 221.0
offset_bottom = 73.0
text = "The Slower You Get"
horizontal_alignment = 1

[connection signal="show_winner" from="MiniGameManager" to="." method="_on_show_winner"]
[connection signal="update_score" from="MiniGameManager" to="." method="_on_mini_game_manager_update_score"]
[connection signal="winner_declared" from="MiniGameManager" to="." method="_on_mini_game_manager_winner_declared"]
[connection signal="body_entered" from="Goal1" to="." method="_on_Goal1_body_entered"]
[connection signal="body_entered" from="Goal2" to="." method="_on_Goal2_body_entered"]
